# scanner

./: CMakeLists.txt  README.md  custommodel.cpp  custommodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  scanner.cpp  scanner.h
Test/: Test.pro
Tests/: Tests.pro  gtest_dependency.pri  main.cpp  tst_empty_dir.h
test/: test.h
tests/Test/: Test.pro  tst_scannertest.cpp
